<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="STR_NMS_MAIN">iSMS</string>
    <string name="STR_NMS_MAIN_ADD">isms</string>
    <string name="STR_NMS_HISSAGE">iSMS</string>
    <string name="STR_NMS_INVITE_SMS_CONTENT">Hi, iSMS is a cool chatting tool. It is free and convenient. Please check http://isms.hissage.com to find more.</string>
    <string name="STR_NMS_NO_SDCARD">SD card is not detected, some operations won\'t be allowed by iSMS</string>
    <string name="STR_NMS_MOUNT_SDCARD">SD card is available for use</string>
    <string name="STR_NMS_SEND_MMS_FAIL">Unable to send the message. It will be sent automatically once network is available.</string>
    <string name="STR_NMS_RECV_MMS_FAIL">Unable to download. Please try again later.</string>
    <string name="STR_NMS_GROUP_CHAT_ME">me</string>
    <string name="STR_NMS_GROUP_CHAT_I">I</string>
    <string name="STR_NMS_GROUP_CHAT_YOU">You</string>
    <string name="STR_NMS_GROUP_CREATE_MSG">%1$s invite %2$s to group chat.</string>
    <string name="STR_NMS_GROUP_ADD_MSG">%1$s joined group chat.</string>
    <string name="STR_NMS_GROUP_DELETE_MSG">%1$s delete %2$s from group chat.</string>
    <string name="STR_NMS_GROUP_QUITE_MSG">%1$s quit from group chat.</string>
    <string name="STR_NMS_GROUP_CHAT_PLACE_HOLDER_MSG_BODY">You joined this group</string>
    <string name="STR_NMS_PICTURE">picture</string>
    <string name="STR_NMS_TAPE">audio</string>
    <string name="STR_NMS_VCARD">contact</string>
    <string name="STR_NMS_LOCATION">location</string>
    <string name="STR_NMS_SKETCH">sketch</string>
    <string name="STR_NMS_VIDEO">video</string>
    <string name="STR_NMS_CALENDAR">calendar</string>
    <string name="STR_NMS_UNKNOWN">unknown</string>
    <string name="STR_NMS_READ_MODE_PIC">an image</string>
    <string name="STR_NMS_READ_MODE_TAPE">an audio note</string>
    <string name="STR_NMS_READ_MODE_VCARD">contacts</string>
    <string name="STR_NMS_READ_MODE_LOCATION">a location</string>
    <string name="STR_NMS_READ_MODE_SKETCH">a sketch</string>
    <string name="STR_NMS_READ_MODE_VIDEO">a video</string>
    <string name="STR_NMS_READ_MODE_CALENDAR">a calendar</string>
    <string name="STR_NMS_ISMS_ENABLE">(iSMS Enable)</string>
    <string name="STR_NMS_READ_MODE_UNKNOWN">an unknown file</string>
    <string name="STR_NMS_ALL_MSG">All Messages</string>
    <string name="STR_NMS_SAVED">Saved</string>
    <string name="STR_NMS_BLOCKMSG">Blocked</string>
    <string name="STR_NMS_SMS_TYPE">SMS</string>
    <string name="STR_NMS_VERSION_ID">v5.2.16.356</string>
    <string name="STR_NMS_NO_SIM">SIM card is not detected</string>
    <string name="STR_NMS_ILLEGAL_ADDRESS">Invalid number</string>
    <string name="STR_NMS_REMIND_USER_SET_NAME">Please update your profile</string>
    <string name="STR_NMS_OK">OK</string>
    <string name="STR_NMS_BACK">Back</string>
    <string name="STR_NMS_CANCEL">Cancel</string>
    <string name="STR_NMS_NETWORK_UNAVL">Please make sure you have a working data connection, e.g., 3G, GPRS or Wi-Fi</string>
    <string name="STR_NMS_TODAY">Today</string>
    <string name="STR_NMS_YESTERDAY">Yesterday</string>
    <string name="STR_NMS_NOW">Now</string>
    <string name="STR_NMS_NO_SIM_CARD">SIM card is not detected, you must insert a SIM card.</string>
    <string name="STR_NMS_NO_CONNECTION">Network is not available or flight mode is on, please check.</string>
    <string name="STR_NMS_ATTACH_SHARE">%1$s shared %2$s</string>
    <string name="STR_NMS_WAIT">Wait…</string>
    <string name="STR_NMS_TIPTITLE">Tip</string>
    <string name="STR_NMS_OPEN">Open</string>
    <string name="STR_NMS_PLAY">Play</string>
    <string name="STR_NMS_VCARD_NAME">%1$s contacts</string>
    <string name="STR_NMS_SHARE_VCARD_FAILED">share contact failed</string>
    <string name="STR_NMS_UPGRADE_URL">http://ismsi.hissage.com/webservice/hss/hssVersionUpdate.php</string>
    <string name="STR_NMS_UPGRADE_TICKER">Version upgrade</string>
    <string name="STR_NMS_UPGRADE_ERROR_TITLE">Upgrade error</string>
    <string name="STR_NMS_UPGRADE_ERROR_CONTENT">Upgrade error, please upgrade in iSMS client</string>
    <string name="STR_NMS_INSTALLED_TITLE">Upgrade success</string>
    <string name="STR_NMS_INSTALLED_CONTENT">Upgrade successfully to the phone</string>
    <string name="STR_NMS_PROMPT_DLG_TITLE">New version detected</string>
    <string name="STR_NMS_PROMPT_DLG_DOWNLOAD">Download</string>
    <string name="STR_NMS_PROMPT_DLG_LATER">Later</string>
    <string name="STR_NMS_UPGRADING">Upgrading</string>
    <string name="STR_NMS_UPGRADE_TIME">Last check: %s</string>
    <string name="STR_NMS_OFFLINE_URL">http://ismsi.hissage.com/webservice/nmsmail/notifyOffline.php</string>
    <string name="STR_NMS_PRELOAD_IP_MSG_CONTENT">"Welcome to iSMS."</string>
    <string name="STR_NMS_ACTIVAT_TITLE">iSMS will send a onetime SMS to verify your phone number. Carrier charge may apply.</string>
    <string name="STR_NMS_ACTIVAT_MAIN_TITLE">Verify your phone number</string>
    <string name="STR_NMS_ACTIVAT_MAIN_TITLE2">Verify your phone number</string>
    <string name="STR_NMS_YOUR_COUNTRY_TITLE">YOUR COUNTRY</string>
    <string name="STR_NMS_YOUR_PHONE_TITLE">YOUR PHONE NUMBER</string>
    <string name="STR_NMS_VERIFY_FAIL_TITLE">Failed to complete SMS verification.</string>
    <string name="STR_NMS_VERIFY_FAIL_CONTENT">Please make sure your phone number is entered correctly.</string>
    <string name="STR_NMS_WORKING_SMS_TIP">Please make sure you have a working SMS plan.</string>
    <string name="STR_NMS_VERIFYING">Waiting to automatically detect an SMS sent to</string>
    <string name="STR_NMS_RETRY">Retry</string>
    <string name="STR_NMS_EDIT_NUMBER">Edit number</string>
    <string name="STR_NMS_UPDATE_PROFILE">Update profile</string>
    <string name="STR_NMS_START_ISMS">Start iSMS</string>
    <string name="STR_NMS_SEND">Send</string>
    <string name="STR_NMS_CONGRATULATIONS_TITLE">Congratulations!</string>
    <string name="STR_NMS_CONGRATULATIONS_CONTENT">Thank you for activating iSMS.\n You can now start to enjoy the service.\nHappy iSMS!</string>
    <string name="STR_NMS_WELCOME_BACK">Welcome back.</string>
    <string name="STR_NMS_SEND_SMS_FAIL">Verification failed, please check:\n  1. Phone number is correct;\n  2. Security software is turned off;\n  3. Other possible reasons to block sending SMS.\nMake sure and try again later.</string>
    <string name="STR_NMS_ACTIVE">Activate iSMS</string>
    <string name="STR_NMS_WELCOME_ACTIVE">Welcome to iSMS</string>
    <string name="STR_NMS_CONNECTING">Connecting...</string>
    <string name="STR_NMS_NEW_MSG_TITLE">New iSMS Message</string>
    <string name="STR_NMS_NEW_SMG_CONTENT">%d unread message</string>
    <string name="STR_NMS_MSG_DUMPER_MSG_SMS">SMS</string>
    <string name="STR_NMS_MSG_DUMPER_MSG_MMS">MMS</string>
    <string name="STR_NMS_MSG_DUMPER_MSG_IP">IP Message</string>
    <string name="STR_NMS_MSG_DUMPER_SEND_MSG">Sent %1$s %2$d:</string>
    <string name="STR_NMS_MSG_DUMPER_RECEIVE_MSG">Received %1$s %2$d:</string>
    <string name="STR_NMS_MSG_DUMPER_MSG_TIME">Time: </string>
    <string name="STR_NMS_MSG_DUMPER_MSG_TEXT">Text</string>
    <string name="STR_NMS_MSG_DUMPER_MSG_PIC">Picture</string>
    <string name="STR_NMS_MSG_DUMPER_MSG_SKETCH">Sketch</string>
    <string name="STR_NMS_MSG_DUMPER_MSG_VOICE">Voice</string>
    <string name="STR_NMS_MSG_DUMPER_MSG_VIDEO">Video</string>
    <string name="STR_NMS_MSG_DUMPER_MSG_CALENDAR">Calendar</string>
    <string name="STR_NMS_MSG_DUMPER_MSG_LOCATION_IMG">Location picture</string>
    <string name="STR_NMS_MSG_DUMPER_MSG_VCARD">Vcard</string>
    <string name="STR_NMS_MSG_DUMPER_MSG_LOCATION">Location</string>
    <string name="STR_NMS_MSG_DUMPER_MSG_CAPTION">Caption: </string>
    <string name="STR_NMS_MSG_DUMPER_MSG_URL">Url: </string>
    <string name="STR_NMS_MSG_DUMPER_DURATION">Duration: </string>
    <string name="STR_NMS_MSG_DUMPER_COORDINATE">Coordinate: </string>
    <string name="STR_NMS_MSG_DUMPER_ADDRESS">Address: </string>
    <string name="STR_NMS_MSG_DUMPER_GROUP_CHAT_SENDER">Sender: </string>
    <string name="STR_NMS_MSG_DUMPER_NORMAL_DETAIL">Session detail:</string>
    <string name="STR_NMS_MSG_DUMPER_NAME">Name: </string>
    <string name="STR_NMS_MSG_DUMPER_NUMBER">Number: </string>
    <string name="STR_NMS_MSG_DUMPER_PORTRAIT">Portrait</string>
    <string name="STR_NMS_MSG_DUMPER_MULTI_SEND_DETAIL">Broadcast:</string>
    <string name="STR_NMS_MSG_DUMPER_GROUP_CHAT_DETAIL">Group chat:</string>
    <string name="STR_NMS_MSG_DUMPER_GROUP_CHAT_CREATER">Creator: </string>
    <string name="STR_NMS_MSG_DUMPER_MEMBERS">Members: </string>
    <string name="STR_NMS_MSG_DUMPER_VCARD_NAME">Name: </string>
    <string name="STR_NMS_MSG_DUMPER_CALENDAR_SUMMARY">Summary: </string>
    <string name="STR_NMS_CHAT_SETTING_TITLE">Chat Settings</string>
    <string name="STR_NMS_DISPLAY">Display</string>
    <string name="STR_NMS_CHAT_WALLPAPER">Chat wallpaper</string>
    <string name="STR_NMS_SYS_WALLPAPER">Select wallpaper</string>
    <string name="STR_NMS_CAMEARPHOTO">Take a photo</string>
    <string name="STR_NMS_SYS_GALLERY">Select from Gallery</string>
    <string name="STR_NMS_DEFAULT_WALLPAPER">Default</string>
    <string name="STR_NMS_NOTIFICATION_CATEGORY">Notification</string>
    <string name="STR_NMS_NOTIFICATION_TITLE">iSMS notification</string>
    <string name="STR_NMS_NOTIFICATION_CONTENT">Show when notifications are received</string>
    <string name="STR_NMS_MUTE">Mute</string>
    <string name="STR_NMS_MUTE_OFF">Off</string>
    <string name="STR_NMS_MUTE_1">Mute for 1 hour</string>
    <string name="STR_NMS_MUTE_4">Mute for 4 hours</string>
    <string name="STR_NMS_MUTE_8">Mute for 8 hours</string>
    <string name="STR_NMS_RINGTONE_TITLE">Ringtone</string>
    <string name="STR_NMS_RINGTONE_CONTENT">Set a ringtone for new notifications </string>
    <string name="STR_NMS_VIBRATE_TITLE">Vibrate</string>
    <string name="STR_NMS_VIBRATE_CONTENT">Vibrate when notifications are received</string>
    <string name="STR_NMS_ACTIONS">Actions</string>
    <string name="STR_NMS_DOWNLOAD_HISTORY_TITLE">Download chat history</string>
    <string name="STR_NMS_DOWNLOAD_HISTORY_CONTENT">Save in SD card in zip format</string>
    <string name="STR_NMS_ACCOUNT_TIP">ISMS ACCOUNT</string>
    <string name="STR_NMS_NO_NAME">Setup your name</string>
    <string name="STR_NMS_SYS_SETTING_TITLE">iSMS Message</string>
    <string name="STR_NMS_SETTINGS_TITLE">PROFILE</string>
    <string name="STR_NMS_PREFERENCE_CATE">PREFERENCES</string>
    <string name="STR_NMS_SEND_SMS_TITLE">Send as SMS</string>
    <string name="STR_NMS_SEND_SMS_CONTENT">Send as SMS when iSMS is unavailable. Carrier messaging rates may apply. This rule does not apply to group chat</string>
    <string name="STR_NMS_AUTO_DOWNLOAD_TITLE">Auto Download</string>
    <string name="STR_NMS_AUTO_DOWNLOAD_CONTENT">Automatically download multimedia objects</string>
    <string name="STR_NMS_CAPTION_TITLE">Captions</string>
    <string name="STR_NMS_CAPTION_CONTENT">Share file with captions</string>
    <string name="STR_NMS_SYSTEM_CATE">SYSTEM</string>
    <string name="STR_NMS_NETWORK_USAGE_TITLE">Network Usage</string>
    <string name="STR_NMS_NETWORK_USAGE_CONTENT">View total sent/received data usage</string>
    <string name="STR_NMS_SWITCH_ON">ON</string>
    <string name="STR_NMS_SWITCH_OFF">OFF</string>
    <string name="STR_NMS_ABOUT">About iSMS</string>
    <string name="STR_NMS_SHOW_READ_STATUS_TITLE">Show Read Status</string>
    <string name="STR_NMS_SHOW_READ_STATUS_CONTENT">Show read status in message list</string>
    <string name="STR_NMS_SHOW_REMIND_TITLE">Show Reminders</string>
    <string name="STR_NMS_SHOW_REMIND_CONTENT">Show iSMS Reminders in chat screen</string>
</resources>