<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="iSMS_system_settings"
    android:title="@string/STR_NMS_SYS_SETTING_TITLE" >

    <PreferenceCategory
        android:key="profile_cate"
        android:title="@string/STR_NMS_SETTINGS_TITLE" >
         <com.hissage.ui.view.NmsPreferenceForProfile
            android:key="nms_profile"
            android:title="@string/STR_NMS_NO_NAME"
            android:layout="@layout/profile_preference" >
        </com.hissage.ui.view.NmsPreferenceForProfile>
    </PreferenceCategory>
       <PreferenceCategory
        android:key="nms_sim_info"
        android:title="@string/STR_NMS_ACCOUNT_TIP" >
        <CheckBoxPreference
            android:key="nms_sim1">
        </CheckBoxPreference>
        
        <CheckBoxPreference
            android:key="nms_sim2">
        </CheckBoxPreference> 
    </PreferenceCategory>
    <PreferenceCategory
        android:key="nms_preferences"
        android:title="@string/STR_NMS_PREFERENCE_CATE" >
        <CheckBoxPreference
            android:key="nms_send_as_sms"
            android:summary="@string/STR_NMS_SEND_SMS_CONTENT"
            android:title="@string/STR_NMS_SEND_SMS_TITLE" >
        </CheckBoxPreference>
        
        <CheckBoxPreference
            android:key="nms_show_read_status"
            android:summary="@string/STR_NMS_SHOW_READ_STATUS_CONTENT"
            android:title="@string/STR_NMS_SHOW_READ_STATUS_TITLE" >
        </CheckBoxPreference>
        
        <CheckBoxPreference
            android:key="nms_show_reminders"
            android:summary="@string/STR_NMS_SHOW_REMIND_CONTENT"
            android:title="@string/STR_NMS_SHOW_REMIND_TITLE" >
        </CheckBoxPreference>

        <com.hissage.ui.view.NmsSwitchPreference
            android:key="nms_caption"
            android:widgetLayout="@layout/preference_switch_item"
            android:summary="@string/STR_NMS_CAPTION_CONTENT"
            android:switchTextOff="@string/STR_NMS_SWITCH_OFF"
            android:switchTextOn="@string/STR_NMS_SWITCH_ON"
            android:title="@string/STR_NMS_CAPTION_TITLE" >
        </com.hissage.ui.view.NmsSwitchPreference>

        <CheckBoxPreference
            android:key="nms_auto_download"
            android:summary="@string/STR_NMS_AUTO_DOWNLOAD_CONTENT"
            android:title="@string/STR_NMS_AUTO_DOWNLOAD_TITLE" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="sytem"
        android:title="@string/STR_NMS_SYSTEM_CATE" >
        <Preference
            android:key="nms_network_usage"
            android:summary="@string/STR_NMS_NETWORK_USAGE_CONTENT"
            android:title="@string/STR_NMS_NETWORK_USAGE_TITLE" >
        </Preference>
        <Preference
            android:key="nms_about"
            android:title="@string/STR_NMS_ABOUT" >
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>